<resources>
    <string name="app_name">COVID-19</string>
    <string name="infected_string">infected:&#160;</string>
    <string name="deceased_string">deceased:&#160;</string>
    <string name="recovered_string">recovered:&#160;</string>
    <string name="active_case_string">active case:&#160;</string>
    <string name="daily_quarantine_string">Quarantine:&#160;</string>
    <string name="lasted_updated_string">lasted updated:&#160;</string>
    <string name="new_confirmed_string">new confirmed:&#160;</string>
    <string name="confirmed_string">confirmed:&#160;</string>
    <string name="new_deaths_string">new deaths:&#160;</string>
    <string name="deaths_string">deaths:&#160;</string>
    <string name="new_recovered_string">new recovered:&#160;</string>
    <string name="tested_string">tested:&#160;</string>
    <string name="quarantine_string">quarantine:&#160;</string>
    <string name="tested_pos_string">testedPos:&#160;</string>
    <string name="tested_neg_string">testedNeg:&#160;</string>
</resources>