<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/txtdashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COVID-19"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="data"
                android:textColor="#52BAFF"
                android:textSize="14sp" />

        </RelativeLayout>


        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight = "1"
        android:layout_rowWeight = "1"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">

            <LinearLayout
                android:id="@+id/PolandLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/polandflag" />

                <TextView
                    android:id="@+id/infectedPoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/infected_string"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/deceasedPoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/deceased_string"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/recoveredPoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/recovered_string"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/activeCasePoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/active_case_string"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/dailyQuarantinePoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/daily_quarantine_string"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/updatePoland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="7dp"
                    android:text="@string/lasted_updated_string"
                    android:textColor="#FFFFFF"
                    android:textSize="8sp" />

            </LinearLayout>


    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight = "1"
                android:layout_rowWeight = "1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/AzerbaijanLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="57dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/azerbaijanflag" />

                    <TextView
                        android:id="@+id/infectedAzerbaijan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/infected_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/deceasedAzerbaijan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/deceased_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/recoveredAzerbaijan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/recovered_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/updateAzerbaijan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="7dp"
                        android:text="@string/lasted_updated_string"
                        android:textColor="#FFFFFF"
                        android:textSize="8sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight = "1"
                android:layout_rowWeight = "1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/GermanyLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="57dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/germanyflag" />

                    <TextView
                        android:id="@+id/newConfirmedGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_confirmed_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/confirmedGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/confirmed_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/newDeathsGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_deaths_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/deathsGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/deaths_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/newRecoveredGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_recovered_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/recoveredGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/recovered_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/updateGermany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="7dp"
                        android:text="@string/lasted_updated_string"
                        android:textColor="#FFFFFF"
                        android:textSize="8sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight = "1"
                android:layout_rowWeight = "1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/AustriaLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="57dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/germanyflag" />

                    <TextView
                        android:id="@+id/newConfirmedAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_confirmed_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/confirmedAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/confirmed_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/newDeathsAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_deaths_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/deathsAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/deaths_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/newRecoveredAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/new_recovered_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/recoveredAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:text="@string/recovered_string"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/updateAustria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="7dp"
                        android:text="@string/lasted_updated_string"
                        android:textColor="#FFFFFF"
                        android:textSize="8sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>








    </GridLayout>

    </LinearLayout>



</ScrollView>